--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
 
 </head>
 <body>
-  
+  <section id="main-container">
+    <h2>Today's To Do</h2>
+    <ul id="to-do-list">
+      <!-- to do list automatically created with JS -->
+    </ul>
+
+  </section>
 </body>
 </html>
