--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webpack Set-Up</title>
 
+  <!-- Font Awesome Icons-->
+  <script src="https://kit.fontawesome.com/64d25ab310.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <section id="main-container">
-    <h2>Today's To Do</h2>
-    <ul id="to-do-list">
-      <!-- to do list automatically created with JS -->
-    </ul>
+    <div id="main-c-head">
+      <h3>Today's To Do</h3>
+      <i class="fa-solid fa-arrows-rotate"></i>
+    </div>
 
+    <input type="text" placeholder="Add to your list">
+
+    <div id="to-do-list">
+      <!-- to do list automatically created with JS -->
+    </div>
+
+    <p id="clear-completed">Clear all completed</p>
+    
   </section>
 </body>
 </html>
