Finish JS and start CSS styles

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
       <i class="fa-solid fa-arrows-rotate"></i>
     </div>
 
-    <input type="text" placeholder="Add to your list">
+    <input type="text" placeholder="Add to your list" id="to-do-input">
 
-    <div id="to-do-list">
+    <article id="to-do-list">
       <!-- to do list automatically created with JS -->
-    </div>
+    </article>
 
     <p id="clear-completed">Clear all completed</p>
     
