Change Color when P tag is clicked

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <!-- to do list automatically created with JS -->
     </article>
 
-    <p id="clear-completed">Clear all completed</p>
+    <p id="clear-completed" class="clear-completed">Clear all completed</p>
     
   </section>
 </body>
