Add new background with sass

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Set-Up</title>
+  <title>To Do List</title>
+
+  <!-- Favicon Icon -->
+  <link rel="icon" type="image/x-icon" href="./">
+
+  <!-- Background SCSS-->
+  <link rel="stylesheet" href="../src/styles/background.css">
 
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/64d25ab310.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <section id="main-container">
+    <!-- Background Start -->
+    <div class="night">
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+      <div class="shooting_star"></div>
+    </div>
+    <!-- Background End -->
+
     <div id="main-c-head">
       <h3>Today's To Do</h3>
       <i class="fa-solid fa-arrows-rotate"></i>
@@ -23,7 +54,7 @@
     </article>
 
     <p id="clear-completed" class="clear-completed">Clear all completed</p>
-    
+
   </section>
 </body>
 </html>
