--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <!-- Background Start -->
-    <!-- <div class="night">
+    <div class="night">
       <div class="shooting_star"></div>
       <div class="shooting_star"></div>
       <div class="shooting_star"></div>
@@ -36,7 +36,7 @@
       <div class="shooting_star"></div>
       <div class="shooting_star"></div>
       <div class="shooting_star"></div>
-    </div> -->
+    </div>
     <!-- Background End -->
 
     <section id="main-container">
